--- a/platformio.ini
+++ b/platformio.ini
@@ -69,6 +69,7 @@ lib_deps =
   rzeldent/micro-http-status@^1.0.2
   rzeldent/micro-moustache@^1.0.0
   rzeldent/micro-timezonedb@^1.0.4
+  adafruit/Adafruit_GPS@^1.7.5
 
 board_build.embed_files =
   html/bootstrap.min.css.gz
@@ -151,6 +152,7 @@ lib_deps =
   rzeldent/micro-http-status@^1.0.2
   rzeldent/micro-moustache@^1.0.0
   rzeldent/micro-timezonedb@^1.0.2
+  adafruit/Adafruit_GPS@^1.7.5
 
 board_build.embed_files =
   html/bootstrap.min.css.gz
